[cc] Don't lock root surface resources for no-damage BeginFrameAcks.

This patch ensures that we call UpdateRootSurfaceResourcesLocked only
when there are damaged surfaces to prevent a DisplayScheduler that
unnecessarily started observing a BeginFrame from getting stuck in a
BeginFrame loop.

Also removes an unnecessary call to SurfaceDamageExpected.

Bug: 727162, 697086
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ie0f78705ee8f76417a7d9f2d8ed87365c8a1cb0a